deployment/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-blue
  template:
    metadata:
      labels:
        app: flask-blue
    spec:
      containers:
      - name: flask
        image: <your_ecr_repo>:blue
        ports:
        - containerPort: 5000
