deployment/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-blue-svc
spec:
  selector:
    app: flask-blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
