deployment/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-green-svc
spec:
  selector:
    app: flask-green
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
